[project]
name = "comfyui-aimidi-nodes"
description = "Nodes:Merge Tag, Clear Tag, Add Tag, Load Images Pair Batch, Save Images Pair"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/AiMiDi/ComfyUI-Aimidi-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Aimidi-nodes"
Icon = ""
